force-app/main/default/objects/Project_Unit_Type__c/fields/RDS_Code__c.field-meta.xml
<CustomField>
    <fullName>RDS_Code__c</fullName>
    <label>Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>