force-app/main/default/objects/Project_Unit_Type__c/fields/RDS_Description__c.field-meta.xml
<CustomField>
    <fullName>RDS_Description__c</fullName>
    <label>Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>