force-app/main/default/objects/Project_Unit_Type__c/fields/RDS_Plan_Layout__c.field-meta.xml
<CustomField>
    <fullName>RDS_Plan_Layout__c</fullName>
    <label>Plan Layout</label>
    <type>TextArea</type>
</CustomField>