force-app/main/default/objects/Project_Unit_Type__c/fields/RDS_Project__c.field-meta.xml
<CustomField>
    <fullName>RDS_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Unit Types</relationshipLabel>
    <relationshipName>Project_Unit_Types</relationshipName>
    <type>Lookup</type>
</CustomField>