force-app/main/default/objects/Project_Unit_Type__c/fields/RDS_Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>RDS_Unique_Code__c</fullName>
    <label>Unique Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>